Continue Java 17 updates.